--- a/SageMaker Project.ipynb
+++ b/SageMaker Project.ipynb
@@ -53,13 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-04-22 08:07:15--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "Resolving ai.stanford.edu (ai.stanford.edu)... 171.64.68.10\n",
+      "Connecting to ai.stanford.edu (ai.stanford.edu)|171.64.68.10|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 84125825 (80M) [application/x-gzip]\n",
+      "Saving to: ‘./data/aclImdb_v1.tar.gz’\n",
+      "\n",
+      "./data/aclImdb_v1.t 100%[===================>]  80.23M  14.5MB/s    in 9.5s    \n",
+      "\n",
+      "2020-04-22 08:07:29 (8.43 MB/s) - ‘./data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "%mkdir ../data\n",
-    "!wget -O ../data/aclImdb_v1.tar.gz http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
-    "!tar -zxf ../data/aclImdb_v1.tar.gz -C ../data"
+    "%mkdir ./data\n",
+    "!wget -O ./data/aclImdb_v1.tar.gz http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+    "!tar -zxf ./data/aclImdb_v1.tar.gz -C ./data"
    ]
   },
   {
@@ -73,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
     "\n",
-    "def read_imdb_data(data_dir='../data/aclImdb'):\n",
+    "def read_imdb_data(data_dir='./data/aclImdb'):\n",
     "    data = {}\n",
     "    labels = {}\n",
     "    \n",
@@ -109,9 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDB reviews: train = 12500 pos / 12500 neg, test = 12500 pos / 12500 neg\n"
+     ]
+    }
+   ],
    "source": [
     "data, labels = read_imdb_data()\n",
     "print(\"IMDB reviews: train = {} pos / {} neg, test = {} pos / {} neg\".format(\n",
@@ -1253,9 +1279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python [conda env:udacity-dnn-nano]",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "conda-env-udacity-dnn-nano-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1267,9 +1293,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
