--- a/SageMaker Project.ipynb
+++ b/SageMaker Project.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDb reviews (combined): train = 25000, test = 25000\n"
+     ]
+    }
+   ],
    "source": [
     "train_X, test_X, train_y, test_y = prepare_imdb_data(data, labels)\n",
     "print(\"IMDb reviews (combined): train = {}, test = {}\".format(len(train_X), len(test_X)))"
@@ -196,9 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I first saw this mini-series a number of years ago on British television and was immediately captivated by the story. This rather surprised me as I am not a great fan of either 'Jane Eyre' or 'Wuthering Heights'; I consider the heroine of the former to be a self-righteous bore, and the latter piece of work as overblown claptrap.<br /><br />'The Tenant of Wildfell Hall', like the aforementioned works, is also somewhat depressing in parts. However, the darker parts of the film were offset by the excitement of Helen's escape, the breathtakingly wild and beautiful landscape of Yorkshire, and the sexual magnetism of Toby Stephens.<br /><br />This film successfully portrays the frustratingly restrictive lifestyle of all women of the time. At best they suffered from a form of minor domestic tyranny as portrayed by the treatment of the womenfolk in the Markham household. At the other end of the scale, there is the unfortunate Helen who is married to a wealthy man of high estate, but is exposed to brutality and humiliation alternating with long periods of neglect. She runs away and experiences a brief moment of freedom but, as a women of mystery living alone in a rural community, she inevitably becomes the subject of spiteful gossip and speculation.<br /><br />Tara Fitzgerald is excellent as the long-suffering Helen Markham. Not only incredibly beautiful (in spite of that terribly unflattering hairstyle) with the most amazing cheekbones, she is also more than capable of playing the central role in the film. Tara is dignified and aloof while, at the same time, allowing us to see that Helen is still dangerously vulnerable. Rupert Graves IS the depraved, yet curiously attractive Arthur Huntingdon - after seeing him, I could never imagine another actor playing that part. Pam Ferris deserves special mention for her role as Gilbert's indulgent mother, as does the actress who played his sister Rose, and Simon Carter who is the uncharitable vicar with a taste for the Good Things in Life. Finally, I could watch this film for Toby Stephens alone; he is so good-looking,rugged, sexy, sensitive (but not in a nauseatingly sentimental way). I am not even sure if he is a good actor as my hormones prevent me from judging him objectively!<br /><br />If there is a fault with the film it is the use of flashbacks which I felt both interfered with the flow of the story and made it slightly confusing. Other people, who have watched this film with me, also had problems with this, and I found I had to explain to them that certain scenes were in fact retrospective.<br /><br />I am extremely grateful for the people responsible for making this film. Not only did I puchase the video (a rare occurrence), but it led me to buy Anne Bronte's superb novel. Naturally, this was better than the film, but only by a narrow margin. I recommend that anyone interested should watch the film and then read the book in that order.<br /><br />\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_X[100])\n",
     "print(train_y[100])"
@@ -213,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,11 +579,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sagemaker\n",
+    "import os\n",
+    "\n",
+    "# set to get local profile\n",
+    "os.environ['AWS_PROFILE'] = 'sagemaker'\n",
     "\n",
     "sagemaker_session = sagemaker.Session()\n",
     "\n",
